# skald

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  bitmask.h  inheritance_graph.cpp  inheritance_graph.h  skald.cpp  skald.h  type_accessor.cpp  type_accessor.h
